# CUDA_PRACTICE

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
attention/: CMakeLists.txt  attention_v0.py  attention_v1_cuda.py  flash_attn.cu  flash_attn_main.cpp  flash_attn_ref2.cu  libtorch_test.cpp  readme.md  softmax.cpp
common/: CMakeLists.txt  common.h  cuda_timer.h  logging.h  matrix.h  ptx.h  readme.md  tester.h  util.h
cutlass/: readme.md
gemm/: CMakeLists.txt  readme.md  sgemm_v0_global_mem.cu  sgemm_v1_shared_mem.cu  sgemm_v2_shared_mem_sliding_window.cu  sgemm_v3_increase_work_of_per_thread.cu  sgemm_v4_float4_loading.cu  sgemm_v6_register_tile_outer_product_float4.cu
interview/: cuda_int8_quant.md  readme.md
linear/: CMakeLists.txt  dense32_gemm.cu  hgemm_v1_wmma_m16n16k16_native_kernel.cu  linear_v0_py.cu  main.py  readme.md  test_cublass.cu  test_v0.py
linear/ocl/: CMakeLists.txt  dense32_gemm.cl  linear_v0.cl  main.cpp
llama/: CMakeLists.txt  model.py  readme.md
llama/ggml/: CMakeLists.txt  readme.md  simple_gemm.cpp
reduce/: CMakeLists.txt  readme.md  reduce_v0_global_mem.cu  reduce_v1_shared_mem.cu  reduce_v2_warp_divergence.cu  reduce_v3_no_bank_conflict.cu  reduce_v4_block_utilization.cu  reduce_v5_unroll_last_warp.cu  reduce_v6_unroll_all_warp.cu  reduce_v7_multi_add.cu  reduce_v8_warp_shuffle.cu
sgemm/: readme.md  sgemm_v1_shared_mem.cu  sgemm_v2_shared_mem_splitk.cu  sgemm_v3_increase_work_of_per_thread.cu  sgemm_v4_float4_loading.cu  sgemm_v5_register_tile_outer_product.cu  sgemm_v6_register_tile_outer_product_float4.cu  sgemm_v7_register_tile_outer_product_float4_transpose.cu  sgemm_v8_double_buffer.cu
transpose/: CMakeLists.txt  readme.md  transpose.cu  transpose_float4_v1.cu  transpose_float4_v2.cu  transpose_native_v0.cu
